feat: intro and experience section

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,17 @@
 {
-	"extends": "astro/tsconfigs/strict",
-	"compilerOptions": {
-		"baseUrl": "./src",
-		"strict": true,
-		"target": "ES2022",
-		"module": "ES2022",
-		"lib": ["ES2022", "DOM"],
-		"paths": {
-			"@components/*": ["components/*"],
-			"@layout": ["layouts/Layout.astro"],
-			"@pages/*": ["pages/*"]
-		}
-	}
+  "extends": "astro/tsconfigs/strict",
+  "compilerOptions": {
+    "baseUrl": "./src",
+    "strict": true,
+    "target": "ES2022",
+    "module": "ES2022",
+    "lib": ["ES2022", "DOM"],
+    "paths": {
+      "@components/*": ["components/*"],
+      "@layout": ["layouts/Layout.astro"],
+      "@pages/*": ["pages/*"],
+      "@utils/*": ["utils/*"],
+      "@icons/*": ["components/icons/*"],
+    },
+  },
 }
